--- a/assets/main.scss
+++ b/assets/main.scss
@@ -4,5 +4,5 @@
 
 @import "minima";
 
-$text-color:       #fdfdfd;
-$background-color: #1f1f23;
+$text-color:       #fdfdfd !default;
+$background-color: #1f1f23 !default;
